tests/compile_fail/partial_eq/unknown_field_attribute.stderr
error: expected one of: `with`, `skip`, `ignore`
 --> tests/compile_fail/partial_eq/unknown_field_attribute.rs:2:25
  |
2 | struct Foo(#[partial_eq(unknown)] i32);
  |                         ^^^^^^^

error: expected one of: `with`, `skip`, `ignore`
 --> tests/compile_fail/partial_eq/unknown_field_attribute.rs:6:24
  |
6 |     Bar { #[partial_eq(unknown)] i: i32 },
  |                        ^^^^^^^
